prevent images from overflowing

--- a/executive.css
+++ b/executive.css
@@ -53,3 +53,7 @@ form button {
 .list-group-item:hover .expanded hr {
   border-top: 1px dashed #ddd;
 }
+
+.list-group-item img {
+  max-width: 100%;
+}
